# balboa

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  __init__.py  rocky  shell.nix
.cargo/: config
.ci/: Dockerfile  README.md  nix-cache-env.sh  rocky-with-logs.sh  sccache-env.sh  sccache-stats.sh  setup-nix-cache.sh  upload-nix-cache.sh
.ci/rocky_sccache_server/: default.nix  go.mod  main.go  spawn.sh
balboa/compression/conti/: Cargo.toml
balboa/compression/conti/crc/: Cargo.toml  build.rs
balboa/compression/conti/crc/cbits/: crc.c  crc.h  crc_wimax.h  crcext.h  types.h
balboa/compression/conti/crc/src/: baseline.rs  lib.rs
balboa/compression/conti/src/: icecast2_ogg_vorbis.rs  lib.rs
balboa/compression/conti/src/icecast2_ogg_vorbis/: compressor.rs  decompressor.rs  ogg_body_reader.rs  utils.rs
balboa/compression/core/: Cargo.toml
balboa/compression/http/: Cargo.toml
balboa/compression/http/header-names/: Cargo.toml
balboa/compression/http/header-names/src/: lib.rs
balboa/compression/http/src/: http_headers.rs  lib.rs  rewriter_adapter.rs  static_files.rs
balboa/compression/rtsp/: Cargo.toml
balboa/compression/rtsp/src/: lib.rs
balboa/coroutine/: Cargo.toml
balboa/coroutine/src/: lib.rs  testsuite.rs
balboa/covert-signaling-types/: Cargo.toml
balboa/covert-signaling-types/examples/: generate-capability.rs
balboa/covert-signaling-types/src/: lib.rs
balboa/injection/: Cargo.toml  build.rs
balboa/injection/examples/: stacking_switching_signal_safety_test.rs
balboa/injection/openssl/: Cargo.toml
balboa/injection/openssl/src/: lib.rs
balboa/injection/src/: fd_state.rs  fd_table.rs  globals.rs  inject.rs  lib.rs  libc_overrides.rs  make_rewriters.rs  stacks.rs  thread_local.c
balboa/injection/src/fd_state/: iovec_ext.rs
balboa/injections/: README.md
balboa/injections/ffplay-rtsp/: Cargo.toml
balboa/injections/ffplay-rtsp/src/: lib.rs
balboa/injections/firefox/: Cargo.toml
balboa/injections/firefox/src/: lib.rs
balboa/injections/icecast/: Cargo.toml  README.md
balboa/injections/icecast/src/: lib.rs
balboa/injections/nginx/: Cargo.toml
balboa/injections/nginx/src/: lib.rs
balboa/injections/socat-rtsp/: Cargo.toml
balboa/injections/vlc/: Cargo.toml  README.md
balboa/injections/vlc/src/: lib.rs
balboa/ipc-protocol/: Cargo.toml
balboa/ipc-protocol/examples/: simple_balboa_master.rs  testing_balboa_master.rs
balboa/ipc-protocol/src/: lib.rs
balboa/rewriter/: Cargo.toml
balboa/rewriter/benches/: simple_tlsrewriter_bench.rs
balboa/rewriter/src/: lib.rs  read_state.rs  sslkeylogfile.rs  tls.rs  tls_rewriter.rs
balboa/rewriter/src/tls/: chacha20.test_vectors  crypto.rs  gen_chacha20_vectors.go  gen_prf_tests.go  prf.test_vectors  signature_scheme.rs
balboa/rewriter/src/tls_rewriter/: errors.rs  handshake.rs  mangling.rs  rocky_crypto.rs  shared_state.rs  testsuite-privkey.pem  testsuite-pubcert.pem  testsuite-pubkey.der  testsuite.rs  tls_record_parser.rs  utils.rs
balboa/rewriter/src/tls_rewriter/rocky_crypto/: client_mac_mangling.rs
docs/: Balboa Injection Framework.md  Balboa Injections.md  Balboa.md  Mickey.md  Stallone.md
etc/: rust.py
etc/machine/: __init__.py  local.py
etc/machine/docker/: __init__.py  netem.py  server.py
etc/nix/: __init__.py  docker-image.nix  pkgs.nix  python_pkgs.nix  shell.nix  sources.json
etc/nix/pkgsets/: cacert.nix  certgen.nix  classifier.nix  mypy.nix  (+10 more)
etc/tool/: __init__.py  ci_helpers.py  doc.py  format.py  mypy.py  test.py  utils.py
mickey/balboa-ipc/: Cargo.toml
mickey/balboa-ipc/src/: balboa.rs  chunk_allocator.rs  crypto.rs  incoming.rs  lib.rs  outgoing.rs  types.rs  u64_bitstruct.rs  utils.rs  wire_protocol.rs
mickey/protocol/: Cargo.toml
mickey/protocol/src/: lib.rs
mickey/server/: Cargo.toml
mickey/server/examples/: chunk_wire_protocol_incoming.rs  chunk_wire_protocol_outgoing.rs
mickey/server/src/: chunk_wire_protocol.rs  incoming.rs  lib.rs  main.rs  mickey_threads.rs  outgoing.rs
stallone/: README.md
stallone/common/: Cargo.toml
stallone/common/src/: const_siphash.rs  emergency_log.rs  internal_metadata_structures.inc  internal_metadata_structures.rs  internal_ring_buffer.rs  lib.rs  loggable_metadata_impls.rs  protocol.rs
stallone/derive/: Cargo.toml
stallone/derive/src/: lib.rs
stallone/log/: Cargo.toml  build.rs
stallone/log/examples/: stallone-stress-test.rs  stallone-test-emergency-log.rs  stallone-test-fork.rs  stallone-test-log.rs
stallone/log/src/: build_id.rs  global_state.rs  lib.rs  macros.rs  stallone_in_tests.rs  thread_local.c  thread_local.rs
stallone/log/src/thread_local/: sys.rs
stallone/master/: Cargo.toml
stallone/master/src/: emergency_log.rs  lib.rs  master.rs  processinfo.rs  sock_thread.rs  timestamp_generator.rs
stallone/parsing/: Cargo.toml
stallone/parsing/src/: contextualize.rs  lib.rs  load_from_binary.rs  model.rs  parsing.rs  schema.rs
stallone/parsing/src/model/: value.rs
stallone/tools/: Cargo.toml
stallone/tools/src/: main.rs  printing.rs
testing/: __init__.py  balboa_master.py  busy_wait.py  capabilities.py  cipher_suite.py  env.py  local.py  logfiles.py  mickey.py  pipe_reader.py  stallone.py
testing/apps/: icecast.py  media_players.py  web.py  web_selenium.py
testing/assets/: .gitignore  __init__.py  dash.html
testing/benchmark/: __init__.py  mickey-bench-report.html  mickey.py
testing/certs/: .gitignore  Makefile  __init__.py
testing/detectability/: __init__.py  run-classifier.py  scenario_lib.py  scenarios.py
testing/integration/: conftest.py  fixtures.py  parameterize_utils.py  pytest.ini  test_balboa_bind_pre_connect.py  test_conti.py  test_docker.py  test_echo.py  test_mickey.py  test_stack_switching_signal_safety.py  test_stallone.py  test_web.cpp  test_web.py
testing/integration/openssl-echo/: Cargo.toml
testing/integration/openssl-echo/src/: lib.rs
testing/recorder-injection/: Cargo.toml  README.md
testing/recorder-injection/src/: lib.rs
utils/scm-rights/: Cargo.toml
utils/systemd-ready/: Cargo.toml
(+23 files in other folders)
