[package]
name = "balboa-coroutine"
version = "0.1.0"
authors = ["Marc Rosen <marc@galois.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stallone = { path = "../../stallone/log" }
genawaiter =  { version = "0.99.1", features = [] }
memchr = "2.5.0"
arrayvec = "0.7.2"

[dev-dependencies]
proptest = "1.0.0"
