[package]
name = "balboa-covert-signaling-types"
version = "0.1.0"
edition = "2021"

[dependencies]
stallone = { path = "../../stallone/log" }
aes = "0.8.1"
subtle = "2.4.1"
serde = { version = "1.0.140", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
hex = "0.4.3"
structopt = "0.3.26"
serde_json = "1.0.82"
