[package]
name = "balboa-injection"
version = "0.1.0"
authors = ["Marc Rosen <marc@galois.com>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
stallone = { path = "../../stallone/log" }
stallone-common = { path = "../../stallone/common" }
balboa-rewriter = { path = "../rewriter" }
balboa-ipc-protocol = { path = "../ipc-protocol" }
balboa-compression = { path = "../compression/core" }
mickey-balboa-ipc = { path = "../../mickey/balboa-ipc" }
balboa-covert-signaling-types = { path = "../covert-signaling-types" }
lazy_static = "1.4.0"
libc = "0.2.126"
parking_lot = "0.12.1"
errno = "0.2.8"
psm = "0.1.20"
hex = "0.4.3"
rand = "0.8.5"
serde_json = "1.0.82"

[dev-dependencies]
proptest = "1.0.0"
blake3 = "1.3.1"

[build-dependencies]
cc = "1.0.73"
