[package]
name = "balboa-ipc-protocol"
version = "0.1.0"
authors = ["Marc Rosen <marc@galois.com>"]
edition = "2021"

[dependencies]
stallone = { path = "../../stallone/log" }
serde = { version = "1.0.140", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
structopt = "0.3.26"
rand = "0.8.5"

