[package]
name = "stallone-derive"
version = "0.1.0"
authors = ["Marc Rosen <marc@galois.com>"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
# We need full, since we talk about match Arms and Patterns.
syn = { version = "1.0.98", features = ["full"] }
quote = "1.0.20"
proc-macro2 = "1.0.41"
