[package]
name = "stallone-tools"
version = "0.1.0"
authors = ["Marc Rosen <marc@galois.com>"]
edition = "2021"

[dependencies]
jemallocator = "0.5.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
structopt = "0.3.26"
stallone-parsing = {path = "../parsing"}
stallone-common = {path = "../common"}
stallone-master = {path = "../master"}
systemd-ready = { path = "../../utils/systemd-ready" }
byteorder = "1.4.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_bytes = "0.11.6"
serde_yaml = "0.9.10"
snafu = "0.7.1"
bincode = "1.3.3"
serde_json = "1.0.82"
libc = "0.2.126"
lz4 = "1.23.3"
signal-hook = "0.3.14"
anyhow = "1.0.58"
bumpalo = "3.10.0"
chrono = "0.4.19"
textwrap = "0.15.0"
serdebug = "1.0.5"
