[package]
name = "balboa-injection-firefox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
balboa-injection = { path = "../../injection" }
balboa-rewriter = { path = "../../rewriter" }
balboa-compression = { path = "../../compression/core" }
balboa-compression-http = { path = "../../compression/http" }

